# ritualist

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: date_scheduled.rs  pausing.rs  ping_pong.rs  snoozing.rs
examples/common/: mod.rs
src/: ack.rs  activation_target.rs  activity.rs  activity_spec.rs  clock.rs  driver.rs  error.rs  lib.rs  schedule.rs
