[package]
name = "ritualist"
version = "0.1.0"
edition = "2024"
authors = ["Yornaath"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yornaath/ritualist"
description = """
App activity manager. Schedule app tasks like reminders etc at given intervals.
"""
categories = ["asynchronous"]
keywords = ["async", "non-blocking", "reminders", "apps", "notifications"]

[features]
test-util = []
serde = ["dep:serde"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync", "process"] }
tokio-util = "0.7"
rand = "0.9" 
chrono = { version = "0.4", features = ["serde"]}
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }